# neurocalib

./: .gitignore  .pre-commit-config.yaml  DAY_PROTOCOL.md  Makefile  README.md  README.pt-BR.md  SECURITY.md  audit.db  justfile  mlflow.db  pyproject.toml
.github/workflows/: ci.yml  weekly-audit.yml
docs/: checklist-operacional.md
docs/adr/: ADR-001-use-uv.md  ADR-002-clean-architecture.md.md  ADR-003-use-mlflow.md  ADR-004-src-layout.md  ADR-005-domain-layer-calibration.md
logbook/: 2026-05-07.md  2026-05-18.md  2026-05-25.md
logs/: schema.sql
sprints/: sprint-01.md  sprint-02.md  sprint-03.md
src/bci_calib/domain/: calibration.py  entities.py  ports.py  value_objects.py
src/bci_calib/infrastructure/: __init__.py
src/bci_calib/infrastructure/tracking/: __init__.py  audit_db.py  logger.py  mlflow_tracker.py
tests/: test_placeholder.py
tests/tracking/: __init__.py  test_audit_db.py  test_logger.py  test_mlflow_tracker.py
tests/unit/domain/: test_calibration.py  test_entities.py  test_ports.py  test_value_objects.py
